[gd_scene load_steps=20 format=3 uid="uid://d3alufwghkqoq"]

[ext_resource type="Texture2D" uid="uid://brtumap3w2vj3" path="res://assets/sprites/king.png" id="1_3n4vj"]
[ext_resource type="Script" uid="uid://dmj6d1wo86v2r" path="res://scripts/dialogue.gd" id="1_bfpow"]
[ext_resource type="PackedScene" uid="uid://c844pkcuoapm0" path="res://scenes/text_box.tscn" id="1_jwyou"]
[ext_resource type="Texture2D" uid="uid://blmcon41pobel" path="res://assets/sprites/Jeremy.png" id="2_fyky8"]
[ext_resource type="Texture2D" uid="uid://b1dplsqs7mvnr" path="res://assets/sprites/deity.png" id="2_vogiq"]
[ext_resource type="Texture2D" uid="uid://0ytlsuoh4mbn" path="res://assets/sprites/end_screen.png" id="5_vogiq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tp716"]
atlas = ExtResource("2_vogiq")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_03vpb"]
atlas = ExtResource("2_vogiq")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ccu7b"]
atlas = ExtResource("2_vogiq")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6xhvj"]
atlas = ExtResource("2_vogiq")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ocawk"]
atlas = ExtResource("2_vogiq")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_led2e"]
atlas = ExtResource("2_fyky8")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vogiq"]
atlas = ExtResource("2_fyky8")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_x1cjp"]
atlas = ExtResource("2_fyky8")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_iahoj"]
atlas = ExtResource("1_3n4vj")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_27a5e"]
atlas = ExtResource("1_3n4vj")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_w3s3v"]
atlas = ExtResource("1_3n4vj")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_sv5jy"]
atlas = ExtResource("5_vogiq")
region = Rect2(0, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_bfpow"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tp716")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tp716")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tp716")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tp716")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tp716")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_03vpb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ccu7b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6xhvj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ocawk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tp716")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tp716")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tp716")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tp716")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tp716")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tp716")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tp716")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tp716")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tp716")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tp716")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tp716")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tp716")
}],
"loop": true,
"name": &"deity",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_led2e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vogiq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1cjp")
}],
"loop": true,
"name": &"jeremy",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iahoj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27a5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w3s3v")
}],
"loop": true,
"name": &"king",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sv5jy")
}],
"loop": true,
"name": &"nobody",
"speed": 5.0
}]

[node name="Dialogue" type="CanvasLayer"]
script = ExtResource("1_bfpow")

[node name="Background" type="ColorRect" parent="."]
offset_right = 320.0
offset_bottom = 180.0
color = Color(0, 0, 0, 1)

[node name="Requester" type="AnimatedSprite2D" parent="."]
position = Vector2(160, 66)
sprite_frames = SubResource("SpriteFrames_bfpow")
animation = &"deity"
autoplay = "jeremy"

[node name="TextBox" parent="." instance=ExtResource("1_jwyou")]
offset_top = -50.0

[connection signal="reading" from="TextBox" to="." method="_on_text_box_reading"]
[connection signal="text_finished" from="TextBox" to="." method="_on_text_box_text_finished"]
[connection signal="textbox_closed" from="TextBox" to="." method="_on_text_box_textbox_closed"]
